--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
+// Database configuration
 DATABASE_USER=tungla
 DATABASE_PASSWORD=1
-DATABASE_NAME=test
+DATABASE_NAME=glitch_explorer
 DATABASE_PORT=5432
 DATABASE_HOST=localhost
