--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.2",
+    "@polkadot/api": "^6.10.1",
+    "@polkadot/ui-keyring": "^0.87.1",
+    "dotenv": "^10.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
