Fetch - transaction fee, logs, event, extrinsic

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "fetch": " npx ts-node sync_data/service.fetch.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
