Fetch- add skip query fee

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,7 @@ DATABASE_PORT=5432
 DATABASE_HOST=localhost
 RPC=ws://13.212.8.146:9944
 FETCH_FROM_ZERO=true
-MULTI_FETCH=10
-
+MULTI_FETCH=1
+START_FROM=120000
+LOGALL=true
+SKIP_FEE=true
