--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DATABASE_PASSWORD=1
 DATABASE_NAME=glitch_explorer
 DATABASE_PORT=5432
 DATABASE_HOST=localhost
+DATABASE_SCHEMA=data_lake_new
 RPC=ws://13.212.8.146:9944
 FETCH_FROM_ZERO=true
 MULTI_FETCH=1
