Move fetch fee and balance to new thread

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,5 @@ FETCH_FROM_ZERO=true
 MULTI_FETCH=1
 START_FROM=120000
 LOGALL=true
-SKIP_FEE=true
-SKIP_LOG=true
-SKIP_EVENT=true
-SKIP_BALANCE=true
+SKIP_LOG=false
+SKIP_EVENT=false
