Fetch - old block by http

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DATABASE_PORT=5432
 DATABASE_HOST=localhost
 DATABASE_SCHEMA=data_lake_new
 RPC=ws://13.212.8.146:9944
+HTTP=http://13.212.8.146:9933
 FETCH_FROM_ZERO=true
 MULTI_FETCH=1
 START_FROM=120000
