--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "@polkadot/api": "^6.10.1",
     "@polkadot/ui-keyring": "^0.87.1",
+    "axios": "^0.25.0",
     "dotenv": "^10.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
