--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/config": "^1.1.3",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.6",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.2.6",
     "@polkadot/api": "^6.10.1",
     "@polkadot/ui-keyring": "^0.87.1",
     "axios": "^0.25.0",
@@ -36,6 +38,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "set-interval-async": "^2.0.3",
     "typeorm": "^0.2.40"
   },
   "devDependencies": {
@@ -45,6 +48,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
+    "@types/set-interval-async": "^1.0.0",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
