--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@polkadot/api": "^6.10.1",
     "@polkadot/ui-keyring": "^0.87.1",
     "axios": "^0.25.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^10.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
