--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.6",
-    "@polkadot/api": "^6.10.1",
-    "@polkadot/ui-keyring": "^0.87.1",
+    "@polkadot/api": "^7.10.1",
+    "@polkadot/ui-keyring": "^1.1.1",
+    "@polkadot/util-crypto": "^8.4.1",
     "axios": "^0.25.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
